# computer-vision-project

./: .gitignore  README.md  main.py  matrix.py  plot.py  pyproject.toml  requirements.txt  sort_by_generation.py  sort_by_id.py  sort_pokedex.py  split_train_val.py
