[tool.poetry]
name = "computer-vision-project"
version = "0.1.0"
description = ""
authors = ["sehnryr <youn@melois.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
convert-case = "^1.2.3"
unidecode = "^1.3.8"
numpy = "^1.26.4"
torch = "^2.3.0"
opencv-python = "^4.9.0.80"
matplotlib = "^3.9.0"
tensorflow = "^2.16.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
